--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section class="nav-container">
         <header>
             <div class="profile">
-                <img src="/img/profile.jpeg" alt="profile picture" class="profile" />
+                <img src="/img/profile.webp" alt="profile picture" class="profile" />
             </div>
             <div class="nav-introduction">
                 <div>
