replace all absolute paths

--- a/contact.html
+++ b/contact.html
@@ -30,10 +30,10 @@
             </div>
         </header>
         <nav class="nav-items">
-            <a href="/">About Me</a>
-            <a href="/skills.html">Skills</a>
-            <a href="/portfolio.html">Portfolio</a>
-            <a href="/contact.html" id="nav-item-active">Contact</a>
+            <a href="index.html">About Me</a>
+            <a href="skills.html">Skills</a>
+            <a href="portfolio.html">Portfolio</a>
+            <a href="contact.html" id="nav-item-active">Contact</a>
         </nav>
     </section>
     <hr />
@@ -60,6 +60,6 @@
         </form>
     </main>
 
-    <a href="/" class="continue">Back to About Me</a>
+    <a href="index.html" class="continue">Back to About Me</a>
 </body>
 </html>
