--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
             </div>
         </header>
         <nav class="nav-items">
-            <a href="/" id="nav-item-active">About Me</a>
-            <a href="/skills.html">Skills</a>
-            <a href="/portfolio.html">Portfolio</a>
-            <a href="/contact.html">Contact</a>
+            <a href="index.html" id="nav-item-active">About Me</a>
+            <a href="skills.html">Skills</a>
+            <a href="portfolio.html">Portfolio</a>
+            <a href="contact.html">Contact</a>
         </nav>
     </section>
     <hr />
@@ -42,19 +42,19 @@
     <main>
         <article>
             <h1>On Mondays…</h1>
-            <p>I spend my time in the BMS. That’s where I learn Mathematics, Sciences, German and French. Or, I like it less - History.</p>
+            <p>I spend my time in the BMS. That's where I learn Mathematics, Sciences, German and French. Or, I like it less - History.</p>
         </article>
         <article>
             <h1>On Tuesdays…</h1>
-            <p>That’s when I hang out with friends and prepare for school exams.</p>
+            <p>That's when I hang out with friends and prepare for school exams.</p>
         </article>
         <article>
             <h1>And on all the other days...</h1>
             <p>I do programming at work and in my free time, I love chess, English and sciences. I play the piano on weekends.</p>
         </article>
         <article>
-            <h1>But Let’s Not Waste More Time</h1>
-            <p>My portfolio shows a general overview over my skills and everything important you need to know. And if that’s not enough, I put my contacts here.</p>
+            <h1>But Let's Not Waste More Time</h1>
+            <p>My portfolio shows a general overview over my skills and everything important you need to know. And if that's not enough, I put my contacts here.</p>
         </article>
     </main>
 
