--- a/skills.html
+++ b/skills.html
@@ -32,10 +32,10 @@
             </div>
         </header>
         <nav class="nav-items">
-            <a href="/">About Me</a>
-            <a href="/skills.html" id="nav-item-active">Skills</a>
-            <a href="/portfolio.html">Portfolio</a>
-            <a href="/contact.html">Contact</a>
+            <a href="index.html">About Me</a>
+            <a href="skills.html" id="nav-item-active">Skills</a>
+            <a href="portfolio.html">Portfolio</a>
+            <a href="contact.html">Contact</a>
         </nav>
     </section>
     <hr />
