--- a/portfolio.html
+++ b/portfolio.html
@@ -32,10 +32,10 @@
             </div>
         </header>
         <nav class="nav-items">
-            <a href="/">About Me</a>
-            <a href="/skills.html">Skills</a>
-            <a href="/portfolio.html" id="nav-item-active">Portfolio</a>
-            <a href="/contact.html">Contact</a>
+            <a href="index.html">About Me</a>
+            <a href="skills.html">Skills</a>
+            <a href="portfolio.html" id="nav-item-active">Portfolio</a>
+            <a href="contact.html">Contact</a>
         </nav>
     </section>
     <hr />
