--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </article>
         <article>
             <h1>But Let's Not Waste More Time</h1>
-            <p>My portfolio shows a general overview over my skills and everything important you need to know. And if that's not enough, I put my contacts here.</p>
+            <p>My portfolio shows a general overview over my skills and everything important you need to know. And if that's not enough, I put <a href="contact.html">my contacts</a> here.</p>
         </article>
     </main>
 
